stat push Mage textes

--- a/RpgGame.csproj
+++ b/RpgGame.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Fight.cs" />
+    <Compile Include="Marketplace.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
