--- a/RpgGame.csproj
+++ b/RpgGame.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Fight.cs" />
+    <Compile Include="FightArena.cs" />
     <Compile Include="Marketplace.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
